[tool.poetry]
name = "gupshup"
version = "1.0.0"
description = "A TUI chat application written in python"
authors = ["kraanzu <kraanzu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
textual = "0.1.15"
playsound = "^1.3.0"
textual_extras = { git = "https://github.com/kraanzu/textual_extras.git", branch = "main" } #better widgets

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gupshup = 'gupshup.__init__:main'
